# catch-data

./: .gitignore  404.html  CONTRIBUTING.md  README.md  docker-compose.test.yml  index.html  mkdocs.yml  sitemap.xml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-docker.yml  ci.yml  deploy.yml  infrastructure.yml  pipeline-analytics.yml  pipeline-ingestion.yml  pipeline-processing.yml  publish.yml  reusable-build-push.yml  schema-generate.yml  schema-sync.yml
CONTRIBUTING/: index.html
DEVELOPMENT_PHILOSOPHY/: index.html
DOCUMENTATION_README/: index.html
FEATURE_REQUEST_AUTOMATION/: index.html
LOCAL_DEVELOPMENT_DEPENDENCIES/: index.html
MEDALLION_ARCHITECTURE/: index.html
PIPELINE_RUNBOOK/: index.html
SHARED_LIBRARY_VERSIONING/: index.html
apps/: README.md
apps/catch-analytics/: Dockerfile  README.md  pyproject.toml
apps/catch-analytics/app/: main.py
apps/catch-analytics/tests/: conftest.py  test_main.py  test_shared_testing.py
apps/catch-ingestion/: Dockerfile  README.md  pyproject.toml
apps/catch-ingestion/app/: main.py  mlb_client.py
apps/catch-ingestion/tests/: conftest.py  test_main.py  test_mlb_client.py  test_shared_testing.py
apps/catch-processing/: Dockerfile  README.md  pyproject.toml
apps/catch-processing/app/: main.py
apps/catch-processing/tests/: conftest.py  test_main.py  test_shared_testing.py
apps/example-analytics/: pyproject.toml
apps/example-analytics/app/: main.py
apps/example-app/: pyproject.toml
apps/example-ingestion/: pyproject.toml
apps/example-ingestion/app/: main.py
apps/example-processing/: pyproject.toml
apps/example-processing/app/: main.py
docs-src/: CONTRIBUTING.md  DOCUMENTATION_README.md  FEATURE_REQUEST_AUTOMATION.md  LOCAL_DEVELOPMENT_DEPENDENCIES.md  MEDALLION_ARCHITECTURE.md  PIPELINE_RUNBOOK.md  SHARED_LIBRARY_VERSIONING.md  index.md
infrastructure/: GITHUB_ACTIONS_ROLE.md  README.md  SECURITY.md  SETUP.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infrastructure/modules/lambda-pipeline-stage/: README.md  main.tf  outputs.tf  variables.tf
libs/: README.md
libs/catch-models/: README.md  pyproject.toml  schema.json
libs/catch-models/catch_models/: __init__.py  gold.py  s3_paths.py  schema.py  silver.py
libs/catch-models/catch_models/bronze/: __init__.py  boxscore.py  content.py  schedule.py
libs/catch-models/tests/: test_bronze.py  test_gold.py  test_models.py  test_s3_paths.py  test_schema.py  test_silver.py
libs/catch-models/tests/fixtures/: boxscore_edge_case.json  boxscore_typical.json  content_edge_case.json  content_typical.json  schedule_edge_case.json  schedule_extra_fields.json  schedule_typical.json
libs/example-data/: pyproject.toml
libs/example-data/example_data/: s3_paths.py
libs/example-lib/: pyproject.toml
meta/: DEVELOPMENT_PHILOSOPHY.md  ROBOT_ETHICS.md
meta/adr/: ADR-015-aws_cloud_provider.md  ADR-016-terraform_iac.md  ADR-017-github_oidc_aws_auth.md  ADR-018-medallion_architecture.md  ADR-019-cloudfront_gold_serving.md
meta/plans/: README.md
meta/plans/catch-v1/: 00-executive-summary.md  01-01-license-to-gpl.md  01-02-replace-template-placeholders.md  01-03-rename-apps-and-libs.md  01-04-update-ci-workflows.md  02-01-bronze-models.md  02-02-silver-models.md  02-03-gold-models.md  02-04-s3-path-conventions.md  02-05-json-schema-generation.md  03-01-mlb-api-client.md  03-02-schedule-ingestion.md  03-03-game-data-ingestion.md  03-04-ingestion-error-handling.md  03-05-cron-configuration.md  04-01-silver-processing-lambda.md  04-02-silver-trigger-config.md  04-03-silver-error-handling.md  05-01-gold-team-schedule-generation.md  05-02-gold-upcoming-games-generation.md  05-03-gold-trigger-and-validation.md  06-01-s3-bucket-config.md  (+21 more)
scripts/: ecr-helper.sh
search/: search_index.json
testing/: README.md  __init__.py  conftest.py
testing/fixtures/: README.md  boxscore_doubleheader_g1.json  boxscore_doubleheader_g2.json  boxscore_extra_innings.json  boxscore_normal.json  boxscore_postponed.json  boxscore_spring_training.json  content_extra_innings.json  content_no_video.json  content_postponed.json  content_spring_training.json  content_with_video.json  schedule_2025.json
testing/integration/: __init__.py  conftest.py  pyproject.toml  test_pipeline.py
