[tool.poetry]
name = "catch-ingestion"
version = "0.1.0"
description = "Bronze layer — ingest raw MLB schedule data into S3"
authors = ["efischer19"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.3"
boto3 = "^1.42.88"
catch-models = { path = "../../libs/catch-models", develop = true }
requests = "^2.32"
tenacity = "^9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
ruff = "^0.15"
moto = "^5.1.22"

[tool.poetry.scripts]
catch-ingestion = "app.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that exercise AWS-compatible integrations",
]
