[tool.poetry]
name = "catch-processing"
version = "0.1.0"
description = "Silver layer — validate and transform bronze data into clean entities"
authors = ["efischer19"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.3"
catch-models = { path = "../../libs/catch-models", develop = true }
boto3 = "^1.42.97"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
ruff = "^0.15"
moto = "^5.1.22"

[tool.poetry.scripts]
catch-processing = "app.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
