[tool.poetry]
name = "catch-integration-tests"
version = "0.1.0"
description = "End-to-end integration tests for the catch-data Bronze → Silver → Gold pipeline"
authors = ["efischer19"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
catch-models = { path = "../../libs/catch-models", develop = true }
boto3 = "^1.42.97"
click = "^8.3"
moto = { version = "^5.1.22", extras = ["s3"] }
pytest = "^9.0"
ruff = "^0.15"
jsonschema = "^4.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["."]
markers = [
    "integration: mark test as an end-to-end pipeline integration test",
]
